fixed spacing between topbar and body content

--- a/mysite/static/css/base.css
+++ b/mysite/static/css/base.css
@@ -1,7 +1,14 @@
+* {
+    font-family: 'KoHo', sans-serif;
+}
 
 body {
     margin: 0;
     background-color: rgb(223, 194, 157);
+
+}
+#body-content {
+    margin-top: 60px;
 }
 
 h2 {
@@ -40,7 +47,6 @@ footer {
 } 
 
 #main {
-    margin-top: 60px;
     text-align: center;
 }
 
@@ -106,7 +112,6 @@ footer {
     min-width: 1000px;
     justify-content: space-between;
     width: 100%;
-    font-family: 'KoHo', sans-serif;
     font-size: 24px;
     color: #adadad;
     background-color: rgb(0, 0, 0);
